--- a/src/renderer/locales/en.json
+++ b/src/renderer/locales/en.json
@@ -97,6 +97,7 @@
   "Reserve":"Reserve",
   "Delete":"Delete",
   "Modify":"Modify",
+  "Open":"Open",
   "Export":"Export",
   "Available":"Available",
   "Amount":"Amount",
