--- a/src/renderer/locales/zh-hk.json
+++ b/src/renderer/locales/zh-hk.json
@@ -180,6 +180,7 @@
   "Delete":"刪除",
   "Modify":"修改",
   "Export":"導出",
+  "Open":"打開",
   "SendAssetSuccess":"發送資產成功",
   "Error.SendAssetFail":"發送資產失敗",
 
