--- a/src/renderer/locales/zh-cn.json
+++ b/src/renderer/locales/zh-cn.json
@@ -526,7 +526,8 @@
   "tickets":"工单",
   "autofund_hint":"请稍等，正在进行激活操作！",
   "Lock":"锁屏",
-  "refresh":"刷新"
+  "refresh":"刷新",
+  "set_all_read":"全部已读"
 
  
  
