--- a/src/renderer/locales/zh-hk.json
+++ b/src/renderer/locales/zh-hk.json
@@ -526,7 +526,8 @@
   "tickets":"工單",
   "autofund_hint":"請稍等，正在進行激活操作！",
   "Lock":"鎖屏",
-  "refresh":"刷新"
+  "refresh":"刷新",
+  "set_all_read":"全部已讀"
 
   
 
