--- a/src/renderer/locales/th.json
+++ b/src/renderer/locales/th.json
@@ -537,7 +537,9 @@
   "set_all_read":"ตั้งค่าให้อ่านทั้งหมด",
   "lock_enable":"เปิดหน้าจอล็อก",
   "lock_disable":"ปิดหน้าจอล็อก",
-  "lock_pwd_wrong":"รหัสผ่านของหน้าจอล็อกไม่ถูกต้อง!" 
+  "lock_pwd_wrong":"รหัสผ่านของหน้าจอล็อกไม่ถูกต้อง!" ,
+  "latest_trade":"ธุรกรรมล่าสุด",
+  "type":"ชนิด"
 
 
   
