--- a/src/renderer/locales/zh-cn.json
+++ b/src/renderer/locales/zh-cn.json
@@ -234,7 +234,7 @@
   "DW.Receive":"实际收到",
 
 
-  "Menu.TradeCenter":"交易",
+  "Menu.TradeCenter":"交易中心",
   "Trade.SelfSelection":"自选交易",
   "Trade.Buy":"买入",
   "Trade.Sell":"卖出",
@@ -534,7 +534,9 @@
   "set_all_read":"全部已读",
   "lock_enable":"开启锁屏",
   "lock_disable":"关闭锁屏",
-  "lock_pwd_wrong":"锁屏密码错误！" 
+  "lock_pwd_wrong":"锁屏密码错误！" ,
+  "latest_trade":"最近成交",
+  "type":"类型" 
 
  
  
