--- a/src/renderer/locales/zh-cn.json
+++ b/src/renderer/locales/zh-cn.json
@@ -31,7 +31,7 @@
   "high_price":"最高价",
   "low_price":"最低价",
   "volumes":"成交量",
-  "change_price":"变化量",
+  "change_price":"涨跌幅",
   "Congratulations":"恭喜您",
 
 
