--- a/src/renderer/locales/th.json
+++ b/src/renderer/locales/th.json
@@ -539,7 +539,8 @@
   "lock_disable":"ปิดหน้าจอล็อก",
   "lock_pwd_wrong":"รหัสผ่านของหน้าจอล็อกไม่ถูกต้อง!" ,
   "latest_trade":"ธุรกรรมล่าสุด",
-  "type":"ชนิด"
+  "type":"ชนิด",
+  "explorer":"หมวด"
 
 
   
