--- a/src/renderer/locales/zh-cn.json
+++ b/src/renderer/locales/zh-cn.json
@@ -536,7 +536,8 @@
   "lock_disable":"关闭锁屏",
   "lock_pwd_wrong":"锁屏密码错误！" ,
   "latest_trade":"最近成交",
-  "type":"类型" 
+  "type":"类型" ,
+  "explorer":"浏览"
 
  
  
